--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,7 @@ AllCops:
     - "db/**/*"
     - "spec/**/*"
     - "test/**/*"
+    - "config/**/*"
   DisplayCopNames: true
 
 Style/Documentation:
